--- a/constraints/port-name-constraint.yaml
+++ b/constraints/port-name-constraint.yaml
@@ -1,16 +1,19 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: AllowedServicePortName
 metadata:
-  name: svc-port-name-constraint
+  name: port-name-constraint
 spec:
   enforcementAction: dryrun
   match:
     kinds:
       - apiGroups: [""]
         kinds: ["Service"]
-    namespaces: ["default"]
+    # namespaces: ["default"]
     # alternatively you can limit it to namespaces where istio-injection is enabled
-    # namespaceSelector:
-    #   istio-injection: enabled
+    namespaceSelector:
+      matchExpressions:
+        - key: istio-injection
+          operator: In
+          values: ["enabled"]
   parameters:
     prefixes: ["http-", "http2-", "grpc-", "mongo-", "redis-", "tcp-"]
