--- a/constraints/vs-same-host-constraint.yaml
+++ b/constraints/vs-same-host-constraint.yaml
@@ -1,7 +1,7 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: UniqueVserviceHostname
 metadata:
-  name: unique-vs-host-constraint
+  name: vs-same-host-constraint
 spec:
   enforcementAction: dryrun
   match:
