denying admission to the cluster for mismatched mtls settings

--- a/constraints/mismatched-mtls-constraint.yaml
+++ b/constraints/mismatched-mtls-constraint.yaml
@@ -3,7 +3,7 @@ kind: MismatchedMtls
 metadata:
   name: mismatched-mtls-constraint
 spec:
-  enforcementAction: dryrun
+  enforcementAction: deny
   match:
     kinds:
       - apiGroups: ["networking.istio.io"]
